# bakhuis_heishamon_rules

./: .gitignore  INSTALLATION.md  Makefile  README.md  hacs.json  pyproject.toml
custom_components/climate_manager/: __init__.py  config_flow.py  const.py  dashboard.yaml  manifest.json  number.py  select.py  sensor.py  switch.py  text.py
custom_components/climate_manager/translations/: en.json
custom_components/heating_manager/: __init__.py  config_flow.py  const.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
heishamon_rules/: heishamon_rules_commented.txt  rules_syntax.md
heishamon_rules/examples/: minimum-frequency-operation.md  weather-compensation-curve.md
simulator/: README.md  pyproject.toml
simulator/src/heishamon_sim/: interpreter.py  simulator.py
simulator/tests/: test_scenarios.py
src/climate_manager/: README.md  automations.yaml  climate_manager_package.yaml  dashboard.yaml  helpers.yaml  sensors.yaml  topics.yaml
src/heating_manager/: README.md  automations.yaml  dashboard.yaml  heating_manager_package.yaml  helpers.yaml  sensors.yaml  topics.yaml
src/heishamon_rules/: heishamon_rules_commented.txt
src/heishamon_rules/examples/: curlymoo_rules.txt  pump-speed-control.md
src/simulator/: __init__.py  interpreter.py  simulator.py
tests/: conftest.py  test_climate_manager.py  test_heating_manager.py  test_integration_setup.py  test_scenarios.py
