[project]
name = "bakhuis-heishamon-rules"
version = "0.1.0"
description = "Rules file for Heishamon to control Panasonic heatpump."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "heishamon-rules-minify>=0.0.4",
]


[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
