[project]
name = "bakhuis-heishamon-rules"
version = "0.1.0"
description = "Rules file for Heishamon to control Panasonic heatpump."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "heishamon-rules-minify>=0.0.4",
]


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pyyaml>=6.0.3",
    "ruff>=0.15.8",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert statements are fine in tests

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pytest.*", "heishamon_rules_minify.*"]
ignore_missing_imports = true
