[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heishamon-sim"
version = "0.1.0"
description = "Simulator and test suite for HeishaMon WDC rules"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/heishamon_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
